--- a/variables/_components.scss
+++ b/variables/_components.scss
@@ -12,120 +12,16 @@
 
 /// Table of Contents
 ///
-/// Components (Spacing)
 /// Components (Borders)
 /// Components (Fonts)
 /// Components (States)
 /// Components (Effects)
 
 
-/// Components (Spacing)
-/// ====================================================================================================
-/// Define common paddings and margins.
 
 
-/// Map of common vertical padding sizes used by the components.
-///
-/// @prop {Number} xsmall [0.125rem]
-///   - Extra-small size for the vertical padding rhythm.
-///
-/// @prop {Number} small [0.25rem]
-///   - Compact size for the vertical padding rhythm.
-///
-/// @prop {Number} medium [0.375rem]
-///   - Medium size for the vertical padding rhythm.
-///
-/// @prop {Number} large [0.5rem]
-///   - Expanded size for the vertical padding rhythm.
-///
-/// @prop {Number} xlarge [0.625rem]
-///   - Extra-large size for the vertical padding rhythm.
-///
-/// @type Map
-
-$component-vertical-paddings: () !default;
-$component-vertical-paddings: map-merge(
-  (
-    'xsmall': spacing('1'), // 2px
-    'small':  spacing('2'), // 4px
-    'medium': spacing('3'), // 6px
-    'large':  spacing('4'), // 8px
-    'xlarge': spacing('5'), // 10px
-  ),
-  $component-vertical-paddings
-);
 
 
-/// Map of common horizontal padding sizes used by the components.
-///
-/// @prop {Number} xsmall [0.25rem]
-///   - Extra-small size for the horizontal padding rhythm.
-///
-/// @prop {Number} small [0.5rem]
-///   - Compact size for the horizontal padding rhythm.
-///
-/// @prop {Number} medium [0.75rem]
-///   - Medium size for the horizontal padding rhythm.
-///
-/// @prop {Number} large [1rem]
-///   - Expanded size for the horizontal padding rhythm.
-///
-/// @prop {Number} xlarge [1.25rem]
-///   - Extra-large size for the horizontal padding rhythm.
-///
-/// @type Map
-
-$component-horizontal-paddings: () !default;
-$component-horizontal-paddings: map-merge(
-  (
-    'xsmall': spacing('2'),  // 4px
-    'small':  spacing('4'),  // 8px
-    'medium': spacing('6'),  // 12px
-    'large':  spacing('8'),  // 16px
-    'xlarge': spacing('10'), // 20px
-  ),
-  $component-horizontal-paddings
-);
-
-
-/// Map of common margin sizes used by the components.
-///
-/// @prop {Number} xxsmall [0.125rem]
-///   - Smallest size for the margin rhythm.
-///
-/// @prop {Number} xsmall [0.25rem]
-///   - Extra-small size for the margin rhythm.
-///
-/// @prop {Number} small [0.5rem]
-///   - Compact size for the margin rhythm.
-///
-/// @prop {Number} medium [1rem]
-///   - Default size for the margin rhythm.
-///
-/// @prop {Number} large [1.5rem]
-///   - Expanded size for the margin rhythm.
-///
-/// @prop {Number} xlarge [2rem]
-///   - Extra-large size for the margin rhythm.
-///
-/// @prop {Number} xxlarge [3rem]
-///   - Extreme size for the margin rhythm.
-///
-/// @type Map
-
-$component-margins: () !default;
-$component-margins: map-merge(
-  (
-    'xxsmall': spacing('1'),    // 2px
-    'xsmall':  spacing('2'),    // 4px
-    'small':   spacing('4'),    // 8px
-    'medium':  spacing('8'),    // 16px
-    'large':   spacing('6', 2), // 24px
-    'xlarge':  spacing('8', 2), // 32px
-    'xxlarge': spacing('8', 3), // 48px
-  ),
-  $component-margins
-);
 
 
 /// Components (Borders)
